--- a/rockpis_docker/Dockerfile
+++ b/rockpis_docker/Dockerfile
@@ -16,6 +16,7 @@ RUN echo "alias cl='clear'" >> /home/rock/.bashrc
 RUN sed -i 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' /etc/pam.d/sshd
 RUN apt-get install -y python3
 RUN apt-get install -y python3-pip
+RUN pip3 install colorlog 
 ENV NOTVISIBLE="in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
 
