--- a/ESP32/platformio.ini
+++ b/ESP32/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lolin_d32]
+[env:esp32dev]
 platform = espressif32
-board = lolin_d32
+board = esp32dev
 framework = espidf
 monitor_speed = 115200
