--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-time-machine
 title: Rockpis for audio
-baseurl: "/rockpis_for_audio"
+baseurl: ""
 url: "https://franeum.github.io/"
