--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SERVER_AP"]
 	path = SERVER_AP
-	url = git@github.com:franeum/rockpis_server_ap.git
+	url = https://github.com/franeum/rockpis_server_ap.git
