add esp32_controller submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SERVER_AP"]
 	path = SERVER_AP
 	url = https://github.com/franeum/rockpis_server_ap.git
+[submodule "ESP32_CONTROLLER"]
+	path = ESP32_CONTROLLER
+	url = https://github.com/franeum/rockpis_esp32_controller.git
