--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ESP32_CONTROLLER"]
 	path = ESP32_CONTROLLER
 	url = https://github.com/franeum/rockpis_esp32_controller.git
+[submodule "SYSTEMD"]
+	path = SYSTEMD
+	url = https://github.com/franeum/rockpis-systemd.git
