add right url to systemd project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ROCKPIS-SYSTEMD"]
 	path = ROCKPIS-SYSTEMD
-	url = ./rockpis-systemd.git
+	url = https://github.com/franeum/rockpis-systemd.git
 [submodule "ROCKPIS-ESP32-CONTROLLER"]
 	path = ROCKPIS-ESP32-CONTROLLER
 	url = https://github.com/franeum/rockpis_esp32_controller.git
