add module ssd1306

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ROCKPIS-ESP32-CONTROLLER"]
 	path = ROCKPIS-ESP32-CONTROLLER
 	url = https://github.com/franeum/rockpis_esp32_controller.git
+[submodule "ROCKPIS-SSD1306"]
+	path = ROCKPIS-SSD1306
+	url = https://github.com/franeum/rockpis_ssd1306.git
